syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "GetMdStateResponseType";

import "sdc/biceps/abstractgetresponse.proto";
import "sdc/biceps/mdstate.proto";

  message GetMdStateResponse {
    AbstractGetResponse abstract_get_response = 1;
    MdState md_state = 2;
  }
